# ai-doc-assistant

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci-cd.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  documents.py  evaluation.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/models/: schemas.py
backend/app/services/: document_processor.py  evaluation.py  llm_factory.py  rag_pipeline.py  vector_store.py
backend/tests/: test_api.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  prometheus.yml
frontend/: app.py
scripts/: setup-ec2.sh
